--- a/src/index.html
+++ b/src/index.html
@@ -22,5 +22,27 @@
 <body>
   <app-root></app-root>
 </body>
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
 
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyC04VrwrsqvJKsPl5kZQFHfWkELTSUgOUA",
+    authDomain: "app-evaluacion-docente.firebaseapp.com",
+    projectId: "app-evaluacion-docente",
+    storageBucket: "app-evaluacion-docente.appspot.com",
+    messagingSenderId: "1039249215972",
+    appId: "1:1039249215972:web:ba3977cb62dc0187ea77f1",
+    measurementId: "G-KTV9FBYYYJ"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </html>
